--- a/index.html
+++ b/index.html
@@ -1,43 +1,172 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="style.css"
-    </head>
-<body>
-    
+<style>
+textarea {
+width: 180px;
+height: 90px;
+padding: 2%;
+font: 1.4em/1.6em cursive;
+background-color: greenyellow;
+border: 1px solid yellowgreen;
+}
+::-webkit-scrollbar {
+width: 18px;
+}
+::-webkit-scrollbar-thumb {
+background: yellowgreen;
+}
+::-webkit-scrollbar-track {
+background: background: yellowgreen;
+border-left: 1px solid yellowgreen;
+}
+::-webkit-resizer {
+background: yellowgreen;
+} 
 
-<a href="Buttons.html"> My button page</a>
-<h2 style="color:blue"> Button Hover Glow Effect</h2>
-<button class="glow-on-hover" type="button">CLICK ME</button><br>
-<h2> Icon Buttons</h2>
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-<button class="btn btn-1 btn-sep icon-info"></button>
-<button class="btn btn-2 btn-sep icon-cart"></button>
 
-<button class="btn btn-4 btn-sep icon-send"></button>
-<h2>Slice Button effect</h2>
-<a class="btn-slice" href="#">
-  <div class="top"><span>Sliced Button</span></div>
-  <div class="bottom"><span>Sliced Button</span></div>
-</a>
+/* Force scrollbars onto browser window */
+body {
+margin-bottom: 200%;
+}
 
-<h2> Next Button Effect</h2>
-<div class="wrapper">
-  <a class="cta" href="#">
-    <span>NEXT</span>
-    <span>
-      <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <path class="one" d="M40.1543933,3.89485454 L43.9763149,0.139296592 C44.1708311,-0.0518420739 44.4826329,-0.0518571125 44.6771675,0.139262789 L65.6916134,20.7848311 C66.0855801,21.1718824 66.0911863,21.8050225 65.704135,22.1989893 C65.7000188,22.2031791 65.6958657,22.2073326 65.6916762,22.2114492 L44.677098,42.8607841 C44.4825957,43.0519059 44.1708242,43.0519358 43.9762853,42.8608513 L40.1545186,39.1069479 C39.9575152,38.9134427 39.9546793,38.5968729 40.1481845,38.3998695 C40.1502893,38.3977268 40.1524132,38.395603 40.1545562,38.3934985 L56.9937789,21.8567812 C57.1908028,21.6632968 57.193672,21.3467273 57.0001876,21.1497035 C56.9980647,21.1475418 56.9959223,21.1453995 56.9937605,21.1432767 L40.1545208,4.60825197 C39.9574869,4.41477773 39.9546013,4.09820839 40.1480756,3.90117456 C40.1501626,3.89904911 40.1522686,3.89694235 40.1543933,3.89485454 Z" fill="#FFFFFF"></path>
-          <path class="two" d="M20.1543933,3.89485454 L23.9763149,0.139296592 C24.1708311,-0.0518420739 24.4826329,-0.0518571125 24.6771675,0.139262789 L45.6916134,20.7848311 C46.0855801,21.1718824 46.0911863,21.8050225 45.704135,22.1989893 C45.7000188,22.2031791 45.6958657,22.2073326 45.6916762,22.2114492 L24.677098,42.8607841 C24.4825957,43.0519059 24.1708242,43.0519358 23.9762853,42.8608513 L20.1545186,39.1069479 C19.9575152,38.9134427 19.9546793,38.5968729 20.1481845,38.3998695 C20.1502893,38.3977268 20.1524132,38.395603 20.1545562,38.3934985 L36.9937789,21.8567812 C37.1908028,21.6632968 37.193672,21.3467273 37.0001876,21.1497035 C36.9980647,21.1475418 36.9959223,21.1453995 36.9937605,21.1432767 L20.1545208,4.60825197 C19.9574869,4.41477773 19.9546013,4.09820839 20.1480756,3.90117456 C20.1501626,3.89904911 20.1522686,3.89694235 20.1543933,3.89485454 Z" fill="#FFFFFF"></path>
-          <path class="three" d="M0.154393339,3.89485454 L3.97631488,0.139296592 C4.17083111,-0.0518420739 4.48263286,-0.0518571125 4.67716753,0.139262789 L25.6916134,20.7848311 C26.0855801,21.1718824 26.0911863,21.8050225 25.704135,22.1989893 C25.7000188,22.2031791 25.6958657,22.2073326 25.6916762,22.2114492 L4.67709797,42.8607841 C4.48259567,43.0519059 4.17082418,43.0519358 3.97628526,42.8608513 L0.154518591,39.1069479 C-0.0424848215,38.9134427 -0.0453206733,38.5968729 0.148184538,38.3998695 C0.150289256,38.3977268 0.152413239,38.395603 0.154556228,38.3934985 L16.9937789,21.8567812 C17.1908028,21.6632968 17.193672,21.3467273 17.0001876,21.1497035 C16.9980647,21.1475418 16.9959223,21.1453995 16.9937605,21.1432767 L0.15452076,4.60825197 C-0.0425130651,4.41477773 -0.0453986756,4.09820839 0.148075568,3.90117456 C0.150162624,3.89904911 0.152268631,3.89694235 0.154393339,3.89485454 Z" fill="#FFFFFF"></path>
-        </g>
-      </svg>
-    </span> 
-  </a>
+/* Box styles */
+.myBox {
+border: none;
+padding: 5px;
+font: 24px/36px sans-serif;
+width: 200px;
+height: 200px;
+overflow: scroll;
+}
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+width: 12px;
+height: 12px;
+}
+
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 10px olivedrab;
+border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+border-radius: 10px;
+background: yellowgreen; 
+box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: #7bac10;
+}
+
+</style>
+<a href="Buttons.html>Button Page</a>
+
+<h1>Textarea styles</h1>
+<h3>Color</h3>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:90px;padding:2%;font-size:1.2em;background-color:gold;">
+Hello
+</textarea>
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:90px;padding:2%;font:1.4em/1.6em cursive;">
+Hello
+</textarea>
+<input type="submit" value="Submit" style="font-size: 14px;border:5px solid orange;background-color:gold;color:olive;">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:90px;padding:2%;font:1.4em/1.6em cursive;background-color:gold;color:hotpink;">
+Hello
+</textarea>
+<input type="submit" value="Submit">
+</form>
+
+
+
+<h3>Background picture</h3>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:150px;padding:2%;font-size:1.2em;background:url('/pix/samples/bubble2.gif');">
+Picture
+</textarea>
+<img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" width="500" height="600">
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:150px;padding:2%;font-size:1.2em;background:url('/pix/samples/celebrate.gif');background-position:center center;background-repeat:no-repeat;">
+Picture
+</textarea>
+<img src="https://media.macphun.com/img/uploads/customer/how-to/579/15531840725c93b5489d84e9.43781620.jpg?q=85&w=1340" width="500" height="600">
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:150px;padding:2%;font-size:1.2em;color:white;background:url('/pix/samples/15l.jpg');background-position:center center;background-repeat:no-repeat;background-size:cover;">
+Picture
+</textarea>
+<input type="submit" value="Submit">
+</form>
+
+
+<h3>Scroll bars</h3>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<div>
+<textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
+Scroll...
+/
+/
+/
+/
+/
+
+</textarea>
 </div>
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<div>
+<textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
+Scroll...
+/
+/
+/
+/
+/
+</textarea>
 </div>
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<div>
+<textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
+Scroll...
+/
+/
+/
+/
+/
+</textarea>
+</div>
+<input type="submit" value="Submit">
+</form>
 
-</body>
-</html>
+
+<h3>Borders</h3>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:96%;height:150px;padding:2%;font-size:1.2em;border:1px solid #6DB72C;">
+
+</textarea><br>
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:93%;height:150px;padding:2%;font-size:1.2em;border:10px solid #6DB72C;">
+
+</textarea><br>
+<input type="submit" value="Submit">
+</form>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<textarea name="comments" id="comments" style="width:93%;height:150px;padding:2%;font-size:1.2em;border:10px dotted #6DB72C;">
+
+</textarea><br>
+<input type="submit" value="Submit">
+</form>
